# rouman-router

./: .gitignore  Cargo.toml  USER_GUIDE.md  check_out.txt  deploy.sh  draft.md  radius.db-shm  radius.db-wal
config/: active.json  candidate.json
docker/: Dockerfile.alpine
rouman-agent/: Cargo.toml
rouman-agent/src/: main.rs
rouman-api/: Cargo.toml
rouman-api/src/: auth.rs  compute.rs  database.rs  error.rs  lib.rs  os_detect.rs
rouman-api/src/automation/: mod.rs
rouman-api/src/config/: mod.rs  mutator.rs
rouman-api/src/dns/: mod.rs
rouman-api/src/firewall/: mod.rs
rouman-api/src/network/: cloudflare.rs  dhcp.rs  interfaces.rs  mod.rs  neighbors.rs  pppoe.rs  proxy.rs  radius.rs  wireguard.rs
rouman-api/src/services/: cloudflared.rs  mod.rs  notifications.rs
rouman-cli/: Cargo.toml
rouman-common/: Cargo.toml
rouman-common/src/: lib.rs
rouman-daemon/: Cargo.toml  check_errors.txt  scratch.rs  test_rcgen.rs
rouman-daemon/src/: automation_manager.rs  cloudflare_manager.rs  database.rs  dhcp_server.rs  dns_server.rs  hotspot_server.rs  main.rs  neighbor_discovery.rs  pppoe_manager.rs  radius_server.rs  test.rs  wan_manager.rs
rouman-daemon/src/compute/: containerd.rs  firecracker.rs  mod.rs
rouman-daemon/src/proxy/: acme_dns.rs  mod.rs
rouman-ebpf/: Cargo.toml
rouman-ebpf/src/: main.rs
ui/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: app.css
ui/src/lib/apps/: Automation.svelte  Cloudflare.svelte  Compute.svelte  Config.svelte  Containers.svelte  Dashboard.svelte  Dhcp.svelte  Discovery.svelte  Dns.svelte  Firewall.svelte  Hotspot.svelte  Interfaces.svelte  Microvms.svelte  Nodes.svelte  Proxy.svelte  Queues.svelte  Routing.svelte  Services.svelte  Stacks.svelte  Storage.svelte  Wireguard.svelte  registry.ts
ui/src/lib/components/: ServiceStarter.svelte  Window.svelte
ui/src/lib/state/: auth.svelte.ts  network.svelte.ts  windows.svelte.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/automation/: +page.svelte
ui/src/routes/cloudflare/: +page.svelte
ui/src/routes/config/: +page.svelte
ui/src/routes/devices/: +page.svelte
ui/src/routes/dhcp/: +page.svelte
ui/src/routes/dns/: +page.svelte
ui/src/routes/docs/: +page.svelte
ui/src/routes/firewall/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/neighbors/: +page.svelte
ui/src/routes/network/: +page.svelte
ui/src/routes/routing/: +page.svelte
ui/src/routes/security/: +page.svelte
(+4 files in other folders)
