[package]
name = "rouman-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = "0.4.44"
futures = "0.3.32"
jsonwebtoken = "9.3.0"
netlink-packet-route = "0.28.0"
rtnetlink = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
rouman-common = { path = "../rouman-common", features = ["user"] }
aya = { version = "0.13.0", features = ["async_tokio"] }
hickory-proto = "0.25.2"
x25519-dalek = "2.0.1"
base64 = "0.22.1"
ipnetwork = "0.21.1"
wireguard-control = "1.7.0"
rand_core = "0.10.1"
rand = "0.8"
aes-gcm = "0.10.3"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
