[package]
name = "rouman-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
rouman-api = { version = "0.1.0", path = "../rouman-api" }
rouman-common = { path = "../rouman-common", features = ["user"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "signal"] }
aya = { version = "0.13.0", features = ["async_tokio"] }
aya-log = "0.2.0"
env_logger = "0.11"
log = "0.4"
hickory-proto = "0.25.2"
rcgen = "0.14.7"
rustls = "0.23.38"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
axum = "0.8.9"
base64 = "0.22.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
reqwest = { version = "0.13.2", features = ["json"] }
pnet = "0.35.0"
hmac = "0.13.0"
sha2 = "0.11.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rhai = { version = "1.24.0", features = ["sync"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
async-trait = "0.1"
hyper-util = "0.1.20"
http-body-util = "0.1.3"
instant-acme = "0.8.5"
openssl = "0.10.77"
hyper = { version = "1.9.0", features = ["full"] }
bytes = "1.11.1"
radius-server = "0.2.1"
md-5 = "0.11.0"

